# ompi

./: LICENSE  README.md  VERSION
ompi/mca/common/ompio/: Makefile.am  common_ompio.h  common_ompio_buffer.c  common_ompio_file_open.c  common_ompio_file_read.c  common_ompio_file_view.c  common_ompio_file_write.c  io_ompio_logging.c  io_ompio_logging.h
ompi/mca/fbtl/: fbtl.h
ompi/mca/fbtl/composix/: Makefile.am  configure.m4  fbtl_composix.c  fbtl_composix.h  fbtl_composix_component.c  fbtl_composix_compression.c  fbtl_composix_compression.h  fbtl_composix_crc32.c  fbtl_composix_debug.c  fbtl_composix_debug.h  fbtl_composix_ipreadv.c  fbtl_composix_ipwritev.c  fbtl_composix_lock.c  fbtl_composix_preadv.c  fbtl_composix_pwritev.c  fbtl_composix_sz.c  fbtl_composix_sz.h  fbtl_composix_sz_crc32.c  fbtl_composix_sz_crc32.h
ompi/mca/fbtl/ime/: fbtl_ime.c
ompi/mca/fbtl/posix/: Makefile.am  configure.m4  fbtl_posix.c  fbtl_posix.h  fbtl_posix_component.c  fbtl_posix_iouring.c  fbtl_posix_ipreadv.c  fbtl_posix_ipwritev.c  fbtl_posix_preadv.c  fbtl_posix_pwritev.c
ompi/mca/fcoll/: fcoll.h
ompi/mca/fcoll/base/: fcoll_base_file_select.c
ompi/mca/fcoll/dynamic/: fcoll_dynamic.h  fcoll_dynamic_file_read_all.c  fcoll_dynamic_file_write_all.c
ompi/mca/fcoll/dynamic_gen2/: fcoll_dynamic_gen2.h  fcoll_dynamic_gen2_file_read_all.c  fcoll_dynamic_gen2_file_write_all.c
ompi/mca/fcoll/individual/: fcoll_individual.h  fcoll_individual_file_read_all.c  fcoll_individual_file_write_all.c
ompi/mca/fcoll/two_phase/: fcoll_two_phase_file_read_all.c  fcoll_two_phase_file_write_all.c
ompi/mca/fcoll/two_phase_gen2/: Makefile.am  fcoll_two_phase_gen2.h  fcoll_two_phase_gen2_component.c  fcoll_two_phase_gen2_file_read_all.c  fcoll_two_phase_gen2_file_write_all.c  fcoll_two_phase_gen2_module.c
ompi/mca/fcoll/vulcan/: fcoll_vulcan.h  fcoll_vulcan_file_read_all.c  fcoll_vulcan_file_write_all.c  fcoll_vulcan_internal.h
ompi/mca/fcoll/vulcomp/: Makefile.am  fcoll_vulcomp.h  fcoll_vulcomp_component.c  fcoll_vulcomp_file_read_all.c  fcoll_vulcomp_file_write_all.c  fcoll_vulcomp_module.c
ompi/mca/fs/base/: fs_base_get_parent_dir.c
ompi/mca/fs/daos/: Makefile.am  fs_daos.c  fs_daos.h  fs_daos_component.c  fs_daos_file_open.c
ompi/mca/fs/lustre/: fs_lustre_file_open.c
ompi/mca/io/base/: io_base_file_select.c
ompi/mca/io/ompio/: io_ompio.c  io_ompio.h  io_ompio_component.c  io_ompio_file_open.c  io_ompio_file_read.c  io_ompio_file_set_view.c  io_ompio_file_write.c
ompi/mca/pml/ob1/: pml_ob1.c  pml_ob1.h  pml_ob1_accelerator.c  pml_ob1_component.c  pml_ob1_recvreq.c  pml_ob1_sendreq.c  pml_ob1_sendreq.h
ompi/mca/sharedfp/: sharedfp.h
ompi/mca/sharedfp/individual/: sharedfp_individual.h  sharedfp_individual_iwrite.c  sharedfp_individual_read.c  sharedfp_individual_write.c
ompi/mca/sharedfp/lockedfile/: sharedfp_lockedfile.h  sharedfp_lockedfile_iread.c  sharedfp_lockedfile_iwrite.c  sharedfp_lockedfile_read.c  sharedfp_lockedfile_write.c
ompi/mca/sharedfp/sm/: sharedfp_sm.h  sharedfp_sm_iread.c  sharedfp_sm_iwrite.c  sharedfp_sm_read.c  sharedfp_sm_request_position.c  sharedfp_sm_write.c
opal/include/opal/: opal_rocm.h
opal/mca/accelerator/rocm/: accelerator_rocm.h  accelerator_rocm_module.c
opal/mca/btl/self/: btl_self.c
opal/mca/btl/smrocm/: Makefile.am  btl_smrocm.c  btl_smrocm.h  btl_smrocm_accelerator.c  btl_smrocm_accelerator.h  btl_smrocm_component.c  btl_smrocm_endpoint.h  btl_smrocm_fifo.h  btl_smrocm_frag.c  btl_smrocm_frag.h  configure.m4  help-mpi-btl-smrocm.txt
opal/mca/rcache/gpurocsm/: Makefile.am  configure.m4  rcache_gpurocsm.h  rcache_gpurocsm_component.c  rcache_gpurocsm_module.c
opal/mca/rcache/rgpurocsm/: Makefile.am  configure.m4  rcache_rgpurocsm.h  rcache_rgpurocsm_component.c  rcache_rgpurocsm_module.c
